fix text-overflow

--- a/sass/Pages/_menu.scss
+++ b/sass/Pages/_menu.scss
@@ -76,14 +76,13 @@
 }
 
 .ohmyfood-menu__card {
-    @extend %flex-row;
+    display: flex;
     width: 90%;
     padding: 0 0 0 1rem;
     margin: 10px 1rem;
     background-color: white;
     border-radius: 10px;
     box-shadow: 1px 4px 4px $color-normal-grey;
-
     
     &:hover .card__check {
         margin-right: 0;
@@ -93,13 +92,14 @@
     .card__recipe {
         @extend %flex-column;
         width: 100%;
-
+        overflow: hidden;
         }
     .recipe__title {
         margin: 10px 0;
     }
     .recipe__subline {
-        @extend %flex-row;
+        display: flex;
+        align-items: center;
         justify-content: space-between;
         
         p {
@@ -108,6 +108,9 @@
 
         .subline__detail {
             font-size: 14px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
         }
         .subline__price {
             font-weight: bolder;
@@ -126,7 +129,6 @@
         transition: margin-right 0.5s;
         display: grid;
         place-items: center;
-        overflow: hidden;
 
         i {
             color: white;
